﻿v1.4.3

* Conversion of KBM Core events over to new Rift Event API.
* Note: KBM Options Menu will be converted over soon, although it is also being rewritten from the ground up. (See LibSGui)

Ready Check
* Change: Convert over to new Event API

LibSUnit
* Change: Converted all Events over to the new Rift Event API.

Phase Monitor
* Fixed: Sub 3% precision display wasn't triggering until sub 2%

Triggers
* Change: "buff" and "buffRemove" are now linked directly to a supplied BossObj.Name
* Change: "playerDebuff" will now link directly to "playerBuff" and use a single check during combat. (Performance boost)

Mechanic Timers
* New: Added method Timer:Wait([Priority]) - Priority defaults to -1 (and is currently not calculated)
* New: Setting a Wait timer will keep the timer in the list (with elapsed time) until the next trigger. 

Rez Master
* New: Res frames can now either Cascade (Original) or Climb (New)
* Change: Converted to new Rift 2.2 API Event system.
* Change: Now uses Safes Table Library (LibSata) for all sorting and updating.

Endless Eclipse
* Progenitor Saetos
** New: Added Personal alert for Soul Rapture (need confirmation on Debuff name, Hard Mode purple bubble, or Buff ID).
** Change: Ebon Eruption timers and alerts are now prefix with the corresponding mini.
** Fixed: Enabled the Percentage Monitor to fire for the final two.

Frozen Tempest
* Galidra
** Fixed: All Castbars now remember their settings correctly (Galidra, Vortex and Amrian)
** New: Added Unit tracking for Hard Mode unit Amrian. (HM)
** New: Added Persistent Castbar for Amrian. (HM)
** New: Added Percentage tracking for Amrian on the Phase Monitor (Only during Hard Mode).
** New: Added Percentage Monitor for tracking 10% difference (Only during Hard Mode).
** New: Added Mechanic Spy and Personal Alert for Hypothermic Induction. (HM)
** New: Added Alert for Razorwind Blizzard. (HM)
** New: Added Mechanic Spy for target of Razorwind Blizzard. (HM)
* Zaviel