@@ -12,6 +12,9 @@ LibSUnit
 Phase Monitor
 * Fixed: Sub 3% precision display wasn't triggering until sub 2%
 
+Tank-Swap
+* New: Can now handle tracking for up to 4 debuffs.
+
 Triggers
 * Change: "buff" and "buffRemove" are now linked directly to a supplied BossObj.Name
 * Change: "playerDebuff" will now link directly to "playerBuff" and use a single check during combat. (Performance boost)
@@ -41,6 +44,7 @@ Frozen Tempest
 ** New: Added Mechanic Spy and Personal Alert for Hypothermic Induction. (HM)
 ** New: Added Alert for Razorwind Blizzard. (HM)
 ** New: Added Mechanic Spy for target of Razorwind Blizzard. (HM)
+** New: Added Tank-Swap monitoring for Deathly Chill (HM)
 * Zaviel
 ** Change: Arc Weld is now flagged as an important Personal Alert.
 ** Change: Increased Power Conducer timer by 5 seconds.
